<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BPProjekat2014</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="already">Already have an account?</string>
    <string name="log_in">Login</string>
    <string name="ime_aplikacije">Aplikacija za vođenje projekata</string>
    <string name="name">Full name</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="forgot">Forgot your password?</string>
    <string name="register">Register new account</string>
    <string name="reg">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
	<string name="namee">Name</string>
	<string name="desc">Description</string>
	<string name="sdescription">Short Description</string>
	<string name="ldescription">Long Description</string>
	<string name="sdate">Start date</string>
	<string name="edate">End date</string>
	<string name="duration">Duration</string>
	<string name="member">Member count</string>
	<string name="budget">Budget</string>
	<string name="done">Done</string>
	<string name="userData">User data</string>
	<string name="crNewPr">User data</string>
	<string name="deadline">Deadline</string>
	<string name="status">Status (%)</string>
	<string name="createdAt">Created at</string>
	<string name="assignedTo">Assigned to</string>
	
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>My profile</item>
        <item>Create new project</item>
        <item>Notifications</item>
        <item>My projects</item>
        <item>My Documents</item>
        <item>Archived projects</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main_page">Menu</string>

</resources>
